plugins {
  id 'java'
  id 'application'
  id 'org.openjfx.javafxplugin' version '0.0.13'
  id 'org.beryx.jlink' version '2.25.0'
  id 'jacoco'
}

group 'ru.nsu.lyskov'
version '1.0-SNAPSHOT'

repositories {
  mavenCentral()
}

ext {
  junitVersion = '5.10.2'
}

sourceCompatibility = '17'
targetCompatibility = '17'

tasks.withType(JavaCompile) {
  options.encoding = 'UTF-8'
}

application {
  mainClass = 'ru.nsu.lyskov.SnakeApp'
}

javafx {
  version = '17'
  modules = ['javafx.controls', 'javafx.fxml']
}

dependencies {
  implementation 'org.openjfx:javafx-controls:17.0.2'
  implementation "org.openjfx:javafx-swing:17.0.2" // Версия должна совпадать с основной JavaFX
  implementation 'org.openjfx:javafx-fxml:17.0.2'

  testImplementation("org.mockito:mockito-core:5.11.0")
  testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")

  testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
  testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
  testImplementation 'org.testfx:testfx-junit5:4.0.16-alpha'
  testImplementation 'org.testfx:openjfx-monocle:jdk-12.0.1+2'
}

test {
  useJUnitPlatform()
  finalizedBy jacocoTestReport
  jvmArgs += ['-XX:+EnableDynamicAgentLoading']
}

jlink {
  imageZip = project.file("${buildDir}/distributions/app-${javafx.platform.classifier}.zip")
  options = ['--strip-debug', '--compress', '2', '--no-header-files', '--no-man-pages']
  launcher {
    name = 'app'
  }
  jpackage {

  }
}

jacocoTestReport {
  dependsOn test
  reports {
    xml.required = true
    html.required = true
  }
}